# zcash_light_client

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
cairo/src/: bitwise_utils.cairo  const.cairo  constants.cairo  debug.cairo  difficulty.cairo  equihash.cairo  hashing.cairo  main.cairo  merkle.cairo  sha.cairo  utils.cairo
crates/cairo_runner/: Cargo.toml
crates/cairo_runner/src/: constants.rs  error.rs  hint_processor.rs  lib.rs  types.rs
crates/cairo_runner/src/hints/: hashing.rs  mod.rs
crates/light_client_minimal/: Cargo.toml  README.md
crates/light_client_minimal/src/: lib.rs  main.rs  sync.rs
crates/light_client_minimal/src/net/: mod.rs  rpc.rs
crates/light_client_minimal/src/store/: file.rs  mod.rs
crates/light_client_minimal/tests/: rpc_pow.rs
crates/stwo_prover/: Cargo.toml
crates/stwo_prover/src/: lib.rs
crates/zcash_crypto/: Cargo.toml  README.md
crates/zcash_crypto/src/: equihash.rs  lib.rs  main.rs
crates/zcash_crypto/src/difficulty/: context.rs  filter.rs  mod.rs  target.rs
crates/zcash_crypto/tests/: difficulty_415000.rs  equihash_vectors.rs
data/: headers.jsonl
scripts/: cairo_compile.sh  check_format.sh  format.sh  setup.sh
