[workspace]
members = [
    "crates/zcash_crypto",
    "crates/light_client_minimal"
]

[workspace.dependencies]
zcash_primitives = { git = "https://github.com/zcash/librustzcash" }
blake2b_simd = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
tokio = "1.48.0"