[workspace]
members = [
    "crates/zcash_crypto",
    "crates/light_client_minimal",
    "crates/cairo_runner"
]

[workspace.dependencies]
cairo-vm-base = { git = "https://github.com/bankaixyz/cairo-vm-base" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash" }
blake2b_simd = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
tokio = "1.48.0"
thiserror = { version = "2.0.9" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20" }