[package]
name = "light_client_minimal"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Minimal light client binary using zcash_crypto primitives with simple persistence"

[dependencies]
zcash_crypto = { path = "../zcash_crypto" }
zcash_primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }


